fix bg-size on safari

--- a/css/modules/_basic.sass
+++ b/css/modules/_basic.sass
@@ -863,7 +863,8 @@ main
             top: -5px
             right: -5px            
             background: url(../img/cansel-icon.svg) no-repeat
-            background-size: 100%
+            -webkit-background-size: cover
+            background-size: cover
     &__check
         appearance: none
         width: 26px
